overlays/magi/verdesumergido/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: verdesumergido-gateway
  namespace: verdesumergido
spec:
  gatewayClassName: cilium
  infrastructure:
    labels:
      pool: public
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: verdesumergido-gateway-tls
      allowedRoutes:
        namespaces:
          from: Same
